fix: code block scrollbars

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -151,6 +151,7 @@ pre,
 code,
 kbd {
   transition: background-color var(--pico-transition);
+  scrollbar-width: thin;
 }
 
 code,
